Fixes bug with notification covering the navbar items.

--- a/meteor/app.scss
+++ b/meteor/app.scss
@@ -49,8 +49,9 @@ body {
 }
 
 // Always show notifications top right corner, even when container is scrolled
-.notifications {
+ul.notifications {
   position: fixed;
+  width: 400px;
   z-index: 1045;
 
   .notification {
